--- a/frontend/index.html
+++ b/frontend/index.html
@@ -237,8 +237,9 @@
                 </div>
               </div>
               <div class="about-feature">
-                <div class="feature-icon">
-                  <i class="fa-solid fa-graduation-cap"></i>
+                <div class="feature-icon" style="background: none; width: 80px; height: 80px;">
+                  <img src="assets/images/3d/building_eco_school.png" alt="Education"
+                    style="width: 100%; height: 100%; object-fit: contain;">
                 </div>
                 <div class="feature-text">
                   <h4>Education & Awareness</h4>
@@ -270,9 +271,9 @@
         </div>
 
         <div class="services-grid">
-          <div class="service-card" data-aos="fade-up" data-aos-delay="0">
-            <div class="service-icon">
-              <i class="fa-solid fa-paw"></i>
+          <div class="service-card" data-tilt>
+            <div class="service-icon-3d">
+              <img src="assets/images/3d/building_animal_shelter.png" alt="Animal Rescue">
             </div>
             <h3>Animal Rescue</h3>
             <p>
@@ -284,9 +285,9 @@
             </a>
           </div>
 
-          <div class="service-card" data-aos="fade-up" data-aos-delay="100">
-            <div class="service-icon">
-              <i class="fa-solid fa-recycle"></i>
+          <div class="service-card" data-tilt>
+            <div class="service-icon-3d">
+              <img src="assets/images/3d/building_recycling_center.png" alt="Waste Management">
             </div>
             <h3>Waste Management</h3>
             <p>
@@ -298,9 +299,9 @@
             </a>
           </div>
 
-          <div class="service-card" data-aos="fade-up" data-aos-delay="200">
-            <div class="service-icon">
-              <i class="fa-solid fa-cloud-sun"></i>
+          <div class="service-card" data-tilt>
+            <div class="service-icon-3d">
+              <img src="assets/images/3d/building_green_energy.png" alt="Climate Action">
             </div>
             <h3>Climate Action</h3>
             <p>
@@ -312,9 +313,9 @@
             </a>
           </div>
 
-          <div class="service-card" data-aos="fade-up" data-aos-delay="300">
-            <div class="service-icon">
-              <i class="fa-solid fa-seedling"></i>
+          <div class="service-card" data-tilt>
+            <div class="service-icon-3d">
+              <img src="assets/images/3d/building_tree_park.png" alt="Tree Plantation">
             </div>
             <h3>Tree Plantation</h3>
             <p>
@@ -326,9 +327,9 @@
             </a>
           </div>
 
-          <div class="service-card" data-aos="fade-up" data-aos-delay="400">
-            <div class="service-icon">
-              <i class="fa-solid fa-phone"></i>
+          <div class="service-card" data-tilt>
+            <div class="service-icon-3d">
+              <img src="assets/images/3d/building_vet_clinic.png" alt="Emergency Help">
             </div>
             <h3>Emergency Wildlife Help</h3>
             <p>
@@ -375,7 +376,7 @@
         <div class="cards-grid">
           <div class="feature-card" data-aos="fade-up" data-aos-delay="0">
             <div class="card-image">
-              <img src="https://i.pinimg.com/736x/24/5e/9a/245e9a9a9898728d21a978edd67b411b.jpg" alt="Adopt Pets" />
+              <img src="assets/images/3d/adopt_pets.png" alt="Adopt Pets" />
               <div class="card-overlay">
                 <span class="card-tag">Adoption</span>
               </div>
@@ -424,7 +425,7 @@
 
           <div class="feature-card" data-aos="fade-up" data-aos-delay="200">
             <div class="card-image">
-              <img src="https://i.pinimg.com/1200x/e3/39/d3/e339d31da13cb49f1b8ecd1a240b26d1.jpg" alt="Feed Animals" />
+              <img src="assets/images/3d/feed_animals.png" alt="Feed Animals" />
               <div class="card-overlay">
                 <span class="card-tag">Feeding</span>
               </div>
@@ -687,43 +688,56 @@
         </div>
 
         <div class="eco-challenges-grid">
-          <div class="eco-challenge-card">
-            <i class="fa-solid fa-droplet"></i>
+          <div class="eco-challenge-card" data-tilt>
+            <div class="challenge-icon-3d">
+              <img src="assets/images/3d/icon_water_plant.png" alt="Water Plant">
+            </div>
             <h3>Water a Plant</h3>
             <p>Water at least one plant today.</p>
             <button class="challenge-btn">Mark as Done</button>
           </div>
 
-          <div class="eco-challenge-card">
-            <i class="fa-solid fa-lightbulb"></i>
+
+          <div class="eco-challenge-card" data-tilt>
+            <div class="challenge-icon-3d">
+              <img src="assets/images/3d/icon_save_energy.png" alt="Save Energy">
+            </div>
             <h3>Save Electricity</h3>
             <p>Turn off unused lights and fans.</p>
             <button class="challenge-btn">Mark as Done</button>
           </div>
 
-          <div class="eco-challenge-card">
-            <i class="fa-solid fa-dove"></i>
+          <div class="eco-challenge-card" data-tilt>
+            <div class="challenge-icon-3d">
+              <img src="assets/images/3d/icon_feed_birds.png" alt="Feed Birds">
+            </div>
             <h3>Feed Birds</h3>
             <p>Place water or grains for birds.</p>
             <button class="challenge-btn">Mark as Done</button>
           </div>
 
-          <div class="eco-challenge-card">
-            <i class="fa-solid fa-ban"></i>
+          <div class="eco-challenge-card" data-tilt>
+            <div class="challenge-icon-3d">
+              <img src="assets/images/3d/icon_no_plastic.png" alt="Avoid Plastic">
+            </div>
             <h3>Avoid Plastic</h3>
             <p>Say no to single-use plastic today.</p>
             <button class="challenge-btn">Mark as Done</button>
           </div>
 
-          <div class="eco-challenge-card">
-            <i class="fa-solid fa-tree"></i>
+          <div class="eco-challenge-card" data-tilt>
+            <div class="challenge-icon-3d">
+              <img src="assets/images/3d/icon_plant_tree.png" alt="Plant Tree">
+            </div>
             <h3>Plant a Sapling</h3>
             <p>Plant or help plant a tree.</p>
             <button class="challenge-btn">Mark as Done</button>
           </div>
 
-          <div class="eco-challenge-card">
-            <i class="fa-solid fa-broom"></i>
+          <div class="eco-challenge-card" data-tilt>
+            <div class="challenge-icon-3d">
+              <img src="assets/images/3d/icon_clean_trash.png" alt="Clean Area">
+            </div>
             <h3>Clean Your Area</h3>
             <p>Pick up litter near your home.</p>
             <button class="challenge-btn">Mark as Done</button>
@@ -781,11 +795,10 @@
 
           <div class="plant-care-images" data-aos="fade-left">
             <div class="plant-img plant-img-1">
-              <img src="https://i.pinimg.com/736x/52/7a/cc/527accddb75efd9315c8d6afba2bba1d.jpg" alt="Gardening Tips" />
+              <img src="assets/images/3d/gardening_tips.png" alt="Gardening Tips" />
             </div>
             <div class="plant-img plant-img-2">
-              <img src="https://i.pinimg.com/736x/7b/07/7d/7b077d6b6f89cc8d0cbe15f85e9d3242.jpg"
-                alt="Community Gardens" />
+              <img src="assets/images/3d/community_gardens.png" alt="Community Gardens" />
             </div>
           </div>
         </div>
@@ -845,33 +858,39 @@
             </p>
 
             <div class="quiz-features">
-              <div class="quiz-feature">
-                <i class="fa-solid fa-gamepad"></i>
+              <div class="quiz-feature" data-tilt>
+                <div class="feature-icon-wrapper icon-game">
+                  <i class="fa-solid fa-gamepad"></i>
+                </div>
                 <span>Fun Games</span>
               </div>
-              <div class="quiz-feature">
-                <i class="fa-solid fa-trophy"></i>
+              <div class="quiz-feature" data-tilt>
+                <div class="feature-icon-wrapper icon-trophy">
+                  <i class="fa-solid fa-trophy"></i>
+                </div>
                 <span>Win Badges</span>
               </div>
-              <div class="quiz-feature">
-                <i class="fa-solid fa-book"></i>
+              <div class="quiz-feature" data-tilt>
+                <div class="feature-icon-wrapper icon-book">
+                  <i class="fa-solid fa-book-open"></i>
+                </div>
                 <span>Learn Facts</span>
               </div>
-
-
             </div>
 
-            <a href="pages/quizzes/quiz.html" class="quiz-btn">
-              <i class="fa-solid fa-play"></i> Start Quiz Now</a>
-            <a href="../frontend/pages/games/waste-game.html" class="quiz-btn"
-              style="background: linear-gradient(135deg, #4caf50 0%, #2e7d32 100%); margin-left: 15px;">
-              <i class="fa-solid fa-gamepad"></i> Play Waste Game
-            </a>
+            <div class="quiz-actions">
+              <a href="pages/quizzes/quiz.html" class="quiz-btn btn-primary-quiz">
+                <i class="fa-solid fa-play"></i> Start Quiz Now
+              </a>
+              <a href="pages/games/waste-game.html" class="quiz-btn btn-secondary-quiz">
+                <i class="fa-solid fa-gamepad"></i> Play Waste Game
+              </a>
+            </div>
           </div>
 
           <div class="quiz-image" data-aos="fade-left">
             <div class="quiz-image-wrapper">
-              <img src="https://i.pinimg.com/1200x/82/b1/66/82b1667e9a1c1fabba633f0792725da9.jpg" alt="Kids Learning" />
+              <img src="assets/images/3d/quiz_mascot.png" alt="Kids Learning" />
               <div class="quiz-floating-badge badge-1">
                 <i class="fa-solid fa-star"></i> Fun!
               </div>
@@ -1668,3 +1687,13 @@
 </body>
 
 </html>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.8.0/vanilla-tilt.min.js"></script>
+<script>
+  VanillaTilt.init(document.querySelectorAll("[data-tilt]"), {
+    max: 15,
+    speed: 400,
+    glare: true,
+    "max-glare": 0.2,
+    scale: 1.05
+  });
+</script>
